--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,8 @@ ul {
 }
 
 /*------------HEADER------------*/
-.nav {
+.nav-logo {
     font-family: "Raleway", sans-serif;
-}
-
-.nav-logo:hover,
-.nav-logo:focus {
-    color: #404bbf;
-}
-
-.nav-color-studio {
     color: #2E2F42;
     font-size: 18px;
     font-weight: 700;
@@ -32,6 +24,7 @@ ul {
 }
 
 .nav-color-web {
+    font-family: "Raleway", sans-serif;
     color: #4D5AE5;
     font-size: 18px;
     font-weight: 700;
@@ -40,9 +33,14 @@ ul {
     text-transform: uppercase;
 }
 
-.nav-menu-link:hover,
-.nav-menu-link:focus {
+.nav-logo:hover,
+.nav-logo:focus {
     color: #2E2F42;
+}
+
+.nav-menu-item:hover,
+.nav-menu-item:focus {
+    color: #404bbf;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 500;
@@ -50,9 +48,13 @@ ul {
     letter-spacing: 0.02em
 }
 
+.contacts {
+    font-style: normal;
+}
+
 .contacts-item:hover,
 .contacts-item:focus {
-    color: #434455;
+    color: #404bbf;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 400;
@@ -168,7 +170,17 @@ ul {
     background-color: #2E2F42;
 }
 
-.footer-logo {
+.color-web {
+    color: #4d5ae5;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+
+.color-studio {
     color: #f4f4fd;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
@@ -177,10 +189,6 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
-}
-
-.footer-color {
-    color: #4d5ae5;
 }
 
 .footer-text {
