--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ ul {
 }
 
 .footer-logo {
+    color: #4d5ae5;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
@@ -179,12 +180,14 @@ ul {
     text-transform: uppercase;
 }
 
-.footer-color-web {
-    color: #4d5ae5;
-}
-
 .footer-color-studio {
     color: #f4f4fd;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .footer-text {
