--- a/css/styles.css
+++ b/css/styles.css
@@ -77,8 +77,7 @@ ul {
     text-align: center;
 }
 
-.hero-button:hover,
-.hero-button:focus {
+[type="button"] {
     background-color: #4D5AE5;
     color: #ffffff;
     font-size: 16px;
@@ -87,6 +86,11 @@ ul {
     letter-spacing: 0.04em;
     font-family: inherit;
     cursor: pointer;
+}
+
+.hero-button:hover,
+.hero-button:focus {
+    color: #404BBF;
 }
 
 /*----------------SECTIO---2------------*/
